initial vault impl Todo: - currency placeholder - per currency formatting - add rediseco